FIX issues raised during code review

--- a/conf/agent.conf.template
+++ b/conf/agent.conf.template
@@ -87,7 +87,7 @@ cygnusagent.sinks.hdfs-sink.file_format = json-column
 cygnusagent.sinks.hdfs-sink.batch_size = 100
 # timeout for batch accumulation
 cygnusagent.sinks.hdfs-sink.batch_timeout = 30
-# number of retries upon persitence error
+# number of retries upon persistence error
 cygnusagent.sinks.hdfs-sink.batch_ttl = 10
 # Hive enabling
 cygnusagent.sinks.hdfs-sink.hive = true
@@ -134,7 +134,7 @@ cygnusagent.sinks.ckan-sink.ssl = false
 cygnusagent.sinks.ckan-sink.batch_size = 100
 # timeout for batch accumulation
 cygnusagent.sinks.ckan-sink.batch_timeout = 30
-# number of retries upon persitence error
+# number of retries upon persistence error
 cygnusagent.sinks.ckan-sink.batch_ttl = 10
 
 # ============================================
@@ -161,7 +161,7 @@ cygnusagent.sinks.mysql-sink.table_type = table-by-destination
 cygnusagent.sinks.mysql-sink.batch_size = 100
 # timeout for batch accumulation
 cygnusagent.sinks.mysql-sink.batch_timeout = 30
-# number of retries upon persitence error
+# number of retries upon persistence error
 cygnusagent.sinks.mysql-sink.batch_ttl = 10
 
 # ============================================
@@ -190,7 +190,7 @@ cygnusagent.sinks.postgresql-sink.data_model = dm-by-service-path
 cygnusagent.sinks.postgresql-sink.batch_size = 100
 # timeout for batch accumulation
 cygnusagent.sinks.postgresql-sink.batch_timeout = 30
-# number of retries upon persitence error
+# number of retries upon persistence error
 cygnusagent.sinks.postgresql-sink.batch_ttl = 10
 
 # ============================================
@@ -221,7 +221,7 @@ cygnusagent.sinks.mongo-sink.attr_persistence = column
 cygnusagent.sinks.mongo-sink.batch_size = 100
 # timeout for batch accumulation
 cygnusagent.sinks.mongo-sink.batch_timeout = 30
-# number of retries upon persitence error
+# number of retries upon persistence error
 cygnusagent.sinks.mongo-sink.batch_ttl = 10
 
 # ============================================
@@ -248,7 +248,7 @@ cygnusagent.sinks.sth-sink.should_hash = false
 cygnusagent.sinks.sth-sink.batch_size = 100
 # timeout for batch accumulation
 cygnusagent.sinks.sth-sink.batch_timeout = 30
-# number of retries upon persitence error
+# number of retries upon persistence error
 cygnusagent.sinks.sth-sink.batch_ttl = 10
 
 #=============================================
@@ -269,7 +269,7 @@ cygnusagent.sinks.kafka-sink.zookeeper_endpoint = x.y.z.w:port
 cygnusagent.sinks.kafka-sink.batch_size = 100
 # timeout for batch accumulation
 cygnusagent.sinks.kafka-sink.batch_timeout = 30
-# number of retries upon persitence error
+# number of retries upon persistence error
 cygnusagent.sinks.kafka-sink.batch_ttl = 10
 
 # ============================================
@@ -294,7 +294,7 @@ cygnusagent.sinks.dynamo-sink.table_type = table-by-destination
 cygnusagent.sinks.dynamo-sink.batch_size = 100
 # timeout for batch accumulation
 cygnusagent.sinks.dynamo-sink.batch_timeout = 30
-# number of retries upon persitence error
+# number of retries upon persistence error
 cygnusagent.sinks.dynamo-sink.batch_ttl = 10
 
 #=============================================
