UPDATE comments regarding oauth2 and password parameters in OrionHDFSSink configuration template

--- a/conf/agent.conf.template
+++ b/conf/agent.conf.template
@@ -79,9 +79,9 @@ cygnusagent.sinks.hdfs-sink.type = com.telefonica.iot.cygnus.sinks.OrionHDFSSink
 # cygnusagent.sinks.hdfs-sink.hdfs_port = 14000
 # username allowed to write in HDFS
 cygnusagent.sinks.hdfs-sink.hdfs_username = hdfs_username
-# password for the above username; this is only required for Hive authentication
+# password for the above username when PAM authentication is enabled in Hive
 cygnusagent.sinks.hdfs-sink.hdfs_password = xxxxxxxx
-# OAuth2 token for HDFS authentication
+# OAuth2 token for WebHDFS/HttpFS authentication and, optionally, Hive authentication when OAuth2 is enabled
 cygnusagent.sinks.hdfs-sink.oauth2_token = xxxxxxxx
 # true if the notified fiware-service (or the default one, if no one is notified) is used as the HDFS namespace, false otherwise
 # cygnusagent.sinks.hdfs-sink.service_as_namespace = false
