FIX the default service and service path to 'default' and '/' respectively

--- a/conf/agent.conf.template
+++ b/conf/agent.conf.template
@@ -43,9 +43,9 @@ cygnusagent.sources.http-source.handler = com.telefonica.iot.cygnus.handlers.Ori
 # URL target
 # cygnusagent.sources.http-source.handler.notification_target = /notify
 # Default service (service semantic depends on the persistence sink)
-# cygnusagent.sources.http-source.handler.default_service = def_serv
+# cygnusagent.sources.http-source.handler.default_service = default
 # Default service path (service path semantic depends on the persistence sink)
-# cygnusagent.sources.http-source.handler.default_service_path = def_serv_path
+# cygnusagent.sources.http-source.handler.default_service_path = /
 # Number of channel re-injection retries before a Flume event is definitely discarded (-1 means infinite retries)
 cygnusagent.sources.http-source.handler.events_ttl = 10
 # Source interceptors, do not change
