ADD an explanation about the need of service paths start with slash

--- a/conf/grouping_rules.conf.template
+++ b/conf/grouping_rules.conf.template
@@ -49,7 +49,7 @@
 # - fiware_service_path: New fiware-servicePath replacing the notified one. The sinks will translate this into the name
 #   of the HDFS folder or CKAN package where the above destination entity will be placed. In the case of MySQL, Mongo
 #   and STH, this prefixes the table/collection name. Please, have a look to doc/design/naming_conventions.md for more
-# details.
+#   details. It must start with `/` or the whole rule will be discarded.
 #
 # More detailed information regarding this feature can be found at:
 # https://github.com/telefonicaid/fiware-cygnus/blob/master/doc/design/interceptors.md#groupinginterceptor-interceptor
