--- a/conf/grouping_rules.conf.template
+++ b/conf/grouping_rules.conf.template
@@ -1,17 +1,17 @@
 # Copyright 2016 Telefónica Investigación y Desarrollo, S.A.U
-# 
+#
 # This file is part of fiware-cygnus (FI-WARE project).
-# 
+#
 # fiware-cygnus is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General
 # Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any
 # later version.
 # fiware-cygnus is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
 # warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more
 # details.
-# 
+#
 # You should have received a copy of the GNU Affero General Public License along with fiware-cygnus. If not, see
 # http://www.gnu.org/licenses/.
-# 
+#
 # For those usages not covered by the GNU Affero General Public License please contact with iot_support at tid dot es
 
 # This file defines a set of grouping rules for context data grouping. It works by defining a set of fields within the
@@ -19,7 +19,7 @@
 # matching then:
 # - The destination within the rule is added to the Flume event headers.
 # - The notified fiware-servicePath header is replaced by the configured one.
-# 
+#
 # Append as many matching rules as you need, following this format:
 #
 # {
@@ -44,11 +44,11 @@
 # - regex: Java-like regular expression to be applied on the concatenated fields. Special characters like '\' must be
 #   escaped ('\' is escaped as "\\").
 # - destination: Name of the HDFS file or CKAN resource where the data will be effectively persisted. In the case of
-#   MySQL, Mongo and STH, this sufixes the table/collection name.
+#   MySQL, Mongo and FIWARE Comet, this sufixes the table/collection name.
 #   Please, have a look to doc/design/naming_conventions.md for more details.
 # - fiware_service_path: New fiware-servicePath replacing the notified one. The sinks will translate this into the name
 #   of the HDFS folder or CKAN package where the above destination entity will be placed. In the case of MySQL, Mongo
-#   and STH, this prefixes the table/collection name. Please, have a look to doc/design/naming_conventions.md for more
+#   and FIWARE Comet, this prefixes the table/collection name. Please, have a look to doc/design/naming_conventions.md for more
 #   details. It must start with `/` or the whole rule will be discarded.
 #
 # More detailed information regarding this feature can be found at:
