[cygnus] [864] [mkdocs.yml] Fix

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,7 +10,7 @@ theme: readthedocs
 extra_css: ["https://fiware.org/style/fiware_readthedocs.css"]
 pages:
   - Home: index.md
-  - 'Contributing': 'contributing/contributing_guidelines.md
+  - 'Contributing': 'contributing/contributing_guidelines.md'
   - 'cygnus-ngsi':
       - 'Quick Start Guide': 'cygnus-ngsi/quick_start_guide.md'
       - 'Installation and Administration Guide':
