[cygnus] [864] [mkdocs.yml] Fix

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,8 +10,8 @@ theme: readthedocs
 extra_css: ["https://fiware.org/style/fiware_readthedocs.css"]
 pages:
   - Home: index.md
-  - 'Contributing': 'contributing/contributing_guidelines.md'
-  - 'cygnus-ngsi':
+  - 'Contributing guidelines': 'contributing/contributing_guidelines.md'
+  - 'cygnus-ngsi agent':
       - 'Quick Start Guide': 'cygnus-ngsi/quick_start_guide.md'
       - 'Installation and Administration Guide':
           - 'Introduction': 'cygnus-ngsi/installation_and_administration_guide/introduction.md'
@@ -55,7 +55,7 @@ pages:
           - 'GroupingInterceptor': 'cygnus-ngsi/flume_extensions_catalogue/grouping_interceptor.md'
           - 'RoundRobinChannelSelector': 'cygnus-ngsi/flume_extensions_catalogue/round_robin_channel_selector.md'
           - 'Reporting issues and contact information': 'cygnus-ngsi/flume_extensions_catalogue/issues_and_contact.md'
-  - 'cygnus-twitter':
+  - 'cygnus-twitter agent':
       - 'Quick Start Guide': 'cygnus-twitter/to_be_done.md'
       - 'Installation and Administration Guide':
           - 'To be done': 'cygnus-twitter/to_be_done.md'
@@ -63,6 +63,6 @@ pages:
           - 'To be done': 'cygnus-twitter/to_be_done.md'
       - 'Flume extensions catalogue':
           - 'To be done': 'cygnus-twitter/to_be_done.md'
-  - 'cygnus-common':
+  - 'cygnus-common library':
       - 'To be done': 'cygnus-common/to_be_done.md'
 
