--- a/cygnus-ngsi/pom.xml
+++ b/cygnus-ngsi/pom.xml
@@ -134,9 +134,9 @@
 	<version>0.9.1</version>
     </dependency>
     <dependency>
-      <groupId>${project.groupId}</groupId>
+      <groupId>com.telefonica.iot</groupId>
       <artifactId>cygnus-common</artifactId>
-      <version>${project.version}</version>
+      <version>0.13.0_SNAPSHOT</version>
     </dependency>
   </dependencies>
 
@@ -164,6 +164,7 @@
         </plugin>
         <plugin>
           <artifactId>maven-assembly-plugin</artifactId>
+          <version>2.6</version>
           <configuration>
             <descriptorRefs>
               <descriptorRef>jar-with-dependencies</descriptorRef>
