--- a/cygnus-common/pom.xml
+++ b/cygnus-common/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.telefonica.iot</groupId>
     <artifactId>cygnus-common</artifactId>
-    <version>0.13.0_SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <name>cygnus-common</name>
