--- a/docker/cygnus-twitter/agent.conf
+++ b/docker/cygnus-twitter/agent.conf
@@ -16,7 +16,7 @@
 # For those usages not covered by the GNU Affero General Public License please contact with iot_support at tid dot es
 #
 
-cygnus-twiter.sources = twitter-source
+cygnus-twitter.sources = twitter-source
 cygnus-twitter.sinks = file-sink
 cygnus-twitter.channels = memory-channel
 
@@ -26,10 +26,10 @@ cygnus-twitter.sources.twitter-source.channels = memory-channel
 # keywords
 # cygnus-twitter.sources.twitter-source.keywords = keyword1, keyword2, keyword3
 # Coordinates for filter query
-cygnus-twitter.sources.twitter-source.top_left_latitude = 40.748433
-cygnus-twitter.sources.twitter-source.top_left_longitude = -73.985656
-cygnus-twitter.sources.twitter-source.bottom_right_latitude = 40.758611
-cygnus-twitter.sources.twitter-source.bottom_right_longitude = -73.979167
+cygnus-twitter.sources.twitter-source.top_left_latitude = 39.5038788
+cygnus-twitter.sources.twitter-source.top_left_longitude = -0.3124204
+cygnus-twitter.sources.twitter-source.bottom_right_latitude = 39.4247692
+cygnus-twitter.sources.twitter-source.bottom_right_longitude = -0.4315448
 cygnus-twitter.sources.twitter-source.consumerKey = WoS9Fvux1F4mvHzCNs0GHsPtB
 cygnus-twitter.sources.twitter-source.consumerSecret = 1hUfnMOsAYioKp7EO81YHiUfJH5hnTrH94hKvjTBtEYdPDWTHj
 cygnus-twitter.sources.twitter-source.accessToken = 260808662-8HczE7f5ab98OjPvvr6GB3SyxD5CBzE5JgWN0nBj
@@ -45,6 +45,6 @@ cygnus-twitter.sinks.file-sink.sink.directory = /tmp
 # cygnus-twitter.sinks.file-sink.batch_ttl = 0
 
 cygnus-twitter.channels.memory-channel.type = memory
-cygnus-twitter.channels.memory-channel.capacity = 1000
-cygnus-twitter.channels.memory-channel.transactionCapacity = 100
+cygnus-twitter.channels.memory-channel.capacity = 10000
+cygnus-twitter.channels.memory-channel.transactionCapacity = 1000
 
