[#864][cygnus-twitter][sources]Bounding box coordinates are now south-west and north-east instead of top-left and bottom-right.

--- a/docker/cygnus-twitter/agent.conf
+++ b/docker/cygnus-twitter/agent.conf
@@ -24,16 +24,16 @@ cygnus-twitter.sources.twitter-source.type = com.telefonica.iot.cygnus.sources.T
 cygnus-twitter.sources.twitter-source.channels = memory-channel
 
 # keywords
-# cygnus-twitter.sources.twitter-source.keywords = keyword1, keyword2, keyword3
+cygnus-twitter.sources.twitter-source.keywords = Pokemon
 # Coordinates for filter query
-cygnus-twitter.sources.twitter-source.top_left_latitude = 39.5038788
-cygnus-twitter.sources.twitter-source.top_left_longitude = -0.3124204
-cygnus-twitter.sources.twitter-source.bottom_right_latitude = 39.4247692
-cygnus-twitter.sources.twitter-source.bottom_right_longitude = -0.4315448
-cygnus-twitter.sources.twitter-source.consumerKey = WoS9Fvux1F4mvHzCNs0GHsPtB
-cygnus-twitter.sources.twitter-source.consumerSecret = 1hUfnMOsAYioKp7EO81YHiUfJH5hnTrH94hKvjTBtEYdPDWTHj
-cygnus-twitter.sources.twitter-source.accessToken = 260808662-8HczE7f5ab98OjPvvr6GB3SyxD5CBzE5JgWN0nBj
-cygnus-twitter.sources.twitter-source.accessTokenSecret = K0vT07kLYzhi0hm2Dh4Zz3VE7nwYBEO4kwKerlGDxgR31
+cygnus-twitter.sources.twitter-source.south_west_latitude = 39.5038788
+cygnus-twitter.sources.twitter-source.south_west_longitude = -0.3124204
+cygnus-twitter.sources.twitter-source.north_east_latitude = 39.4247692
+cygnus-twitter.sources.twitter-source.north_east_longitude = -0.4315448
+cygnus-twitter.sources.twitter-source.consumerKey =
+cygnus-twitter.sources.twitter-source.consumerSecret =
+cygnus-twitter.sources.twitter-source.accessToken =
+cygnus-twitter.sources.twitter-source.accessTokenSecret =
 
 cygnus-twitter.sinks.file-sink.channel = memory-channel
 cygnus-twitter.sinks.file-sink.type = file_roll
