--- a/docker/cygnus-twitter/agent.conf
+++ b/docker/cygnus-twitter/agent.conf
@@ -24,12 +24,12 @@ cygnus-twitter.sources.twitter-source.type = com.telefonica.iot.cygnus.sources.T
 cygnus-twitter.sources.twitter-source.channels = memory-channel
 
 # keywords
-cygnus-twitter.sources.twitter-source.keywords = Pokemon
+# cygnus-twitter.sources.twitter-source.keywords =
 # Coordinates for filter query
-cygnus-twitter.sources.twitter-source.south_west_latitude = 39.5038788
-cygnus-twitter.sources.twitter-source.south_west_longitude = -0.3124204
-cygnus-twitter.sources.twitter-source.north_east_latitude = 39.4247692
-cygnus-twitter.sources.twitter-source.north_east_longitude = -0.4315448
+cygnus-twitter.sources.twitter-source.south_west_latitude = 39.4247692
+cygnus-twitter.sources.twitter-source.south_west_longitude = -0.4315448
+cygnus-twitter.sources.twitter-source.north_east_latitude = 39.5038788
+cygnus-twitter.sources.twitter-source.north_east_longitude = -0.3124204
 cygnus-twitter.sources.twitter-source.consumerKey =
 cygnus-twitter.sources.twitter-source.consumerSecret =
 cygnus-twitter.sources.twitter-source.accessToken =
