[1020][cygnus][docker/cygnus-common] Add environment variables

--- a/docker/cygnus-common/agent.conf
+++ b/docker/cygnus-common/agent.conf
@@ -20,11 +20,11 @@ cygnus-common.sources = http-source
 cygnus-common.sinks = logger-sink
 cygnus-common.channels = logger-channel
 
-cygnus-ngsi.sources.http-source.channels = logger-channel
-cygnus-ngsi.sources.http-source.type = org.apache.flume.source.http.HTTPSource
-cygnus-ngsi.sources.http-source.port = 5050
-cygnus-ngsi.sources.http-source.interceptors = ts
-cygnus-ngsi.sources.http-source.interceptors.ts.type = timestamp
+cygnus-common.sources.http-source.channels = logger-channel
+cygnus-common.sources.http-source.type = org.apache.flume.source.http.HTTPSource
+cygnus-common.sources.http-source.port = 5050
+cygnus-common.sources.http-source.interceptors = ts
+cygnus-common.sources.http-source.interceptors.ts.type = timestamp
 
 cygnus-common.sinks.logger-sink.channel = logger-channel
 cygnus-common.sinks.logger-sink.type = logger
