--- a/docker/cygnus-ngsi/Dockerfile
+++ b/docker/cygnus-ngsi/Dockerfile
@@ -29,6 +29,8 @@ ENV CYGNUS_CONF_FILE "/opt/apache-flume/conf/agent.conf"
 ENV CYGNUS_AGENT_NAME "cygnus-ngsi"
 ENV CYGNUS_LOG_LEVEL "INFO"
 ENV CYGNUS_LOG_APPENDER "console"
+ENV CYGNUS_SERVICE_PORT "5050"
+ENV CYGNUS_API_PORT "8081"
 
 ENV GIT_URL_CYGNUS "https://github.com/telefonicaid/fiware-cygnus.git"
 ENV GIT_REV_CYGNUS "develop"
@@ -104,6 +106,5 @@ COPY agent.conf ${FLUME_HOME}/conf/
 ENTRYPOINT ["/cygnus-entrypoint.sh"]
 
 # Ports used by cygnus-ngsi
-EXPOSE 5050
-EXPOSE 8081
-
+EXPOSE ${CYGNUS_SERVICE_PORT}
+EXPOSE ${CYGNUS_API_PORT}
