[1038][docker/cygnus-ngsi][Dockerfile] Add MySQL user and pass environment variables

--- a/docker/cygnus-ngsi/Dockerfile
+++ b/docker/cygnus-ngsi/Dockerfile
@@ -31,6 +31,8 @@ ENV CYGNUS_LOG_LEVEL "INFO"
 ENV CYGNUS_LOG_APPENDER "console"
 ENV CYGNUS_SERVICE_PORT "5050"
 ENV CYGNUS_API_PORT "8081"
+ENV CYGNUS_MYSQL_USER "mysql"
+ENV CYGNUS_MYSQL_PASS "mysql"
 
 ENV GIT_URL_CYGNUS "https://github.com/telefonicaid/fiware-cygnus.git"
 ENV GIT_REV_CYGNUS "develop"
