[#1023][cygnus-twitter][docker]Updated version number.

--- a/docker/cygnus-twitter/agent.conf
+++ b/docker/cygnus-twitter/agent.conf
@@ -30,10 +30,10 @@ cygnus-twitter.sources.twitter-source.south_west_latitude = 39.4247692
 cygnus-twitter.sources.twitter-source.south_west_longitude = -0.4315448
 cygnus-twitter.sources.twitter-source.north_east_latitude = 39.5038788
 cygnus-twitter.sources.twitter-source.north_east_longitude = -0.3124204
-cygnus-twitter.sources.twitter-source.consumerKey = WoS9Fvux1F4mvHzCNs0GHsPtB
-cygnus-twitter.sources.twitter-source.consumerSecret = 1hUfnMOsAYioKp7EO81YHiUfJH5hnTrH94hKvjTBtEYdPDWTHj
-cygnus-twitter.sources.twitter-source.accessToken = 260808662-8HczE7f5ab98OjPvvr6GB3SyxD5CBzE5JgWN0nBj
-cygnus-twitter.sources.twitter-source.accessTokenSecret = K0vT07kLYzhi0hm2Dh4Zz3VE7nwYBEO4kwKerlGDxgR31
+cygnus-twitter.sources.twitter-source.consumerKey =
+cygnus-twitter.sources.twitter-source.consumerSecret =
+cygnus-twitter.sources.twitter-source.accessToken =
+cygnus-twitter.sources.twitter-source.accessTokenSecret =
 
 
 cygnus-twitter.sinks.hdfs-sink.channel = memory-channel
@@ -52,10 +52,10 @@ cygnus-twitter.sinks.hdfs-sink.hdfs_username = jpalanca
 # password for the above username; this is only required for Hive authentication
 #cygnus-twitter.sinks.hdfs-sink.hdfs_password = xxxxxxxx
 # OAuth2 token for HDFS authentication
-cygnus-twitter.sinks.hdfs-sink.oauth2_token = njcYjEjBFNWKUezqkgDkDXqphKYNzo
+cygnus-twitter.sinks.hdfs-sink.oauth2_token =
 
 cygnus-twitter.sinks.hdfs-sink.hdfs_folder = vlc
-cygnus-twitter.sinks.hdfs-sink.hdfs_file = tweets3.txt
+cygnus-twitter.sinks.hdfs-sink.hdfs_file = tweets.txt
 
 
 
