[1105][docker/cygnus-ngsi/agent.conf] Fix MySQL and MongoDB host names

--- a/docker/cygnus-ngsi/agent.conf
+++ b/docker/cygnus-ngsi/agent.conf
@@ -36,7 +36,7 @@ cygnus-ngsi.sinks.mysql-sink.type = com.telefonica.iot.cygnus.sinks.NGSIMySQLSin
 cygnus-ngsi.sinks.mysql-sink.channel = mysql-channel
 cygnus-ngsi.sinks.mysql-sink.enable_grouping = false
 cygnus-ngsi.sinks.mysql-sink.enable_lowercase = false
-cygnus-ngsi.sinks.mysql-sink.mysql_host = mysql
+cygnus-ngsi.sinks.mysql-sink.mysql_host = iot-mysql
 cygnus-ngsi.sinks.mysql-sink.mysql_port = 3306
 cygnus-ngsi.sinks.mysql-sink.mysql_username =
 cygnus-ngsi.sinks.mysql-sink.mysql_password =
@@ -50,7 +50,7 @@ cygnus-ngsi.sinks.mongo-sink.type = com.telefonica.iot.cygnus.sinks.NGSIMongoSin
 cygnus-ngsi.sinks.mongo-sink.channel = mongo-channel
 cygnus-ngsi.sinks.mongo-sink.enable_grouping = false
 cygnus-ngsi.sinks.mongo-sink.enable_lowercase = false
-cygnus-ngsi.sinks.mongo-sink.mongo_hosts = mongo:27017
+cygnus-ngsi.sinks.mongo-sink.mongo_hosts = iot-mongo:27017
 cygnus-ngsi.sinks.mongo-sink.mongo_username =
 cygnus-ngsi.sinks.mongo-sink.mongo_password =
 cygnus-ngsi.sinks.mongo-sink.db_prefix = sth_
@@ -69,7 +69,7 @@ cygnus-ngsi.sinks.sth-sink.type = com.telefonica.iot.cygnus.sinks.NGSISTHSink
 cygnus-ngsi.sinks.sth-sink.channel = sth-channel
 cygnus-ngsi.sinks.sth-sink.enable_grouping = false
 cygnus-ngsi.sinks.sth-sink.enable_lowercase = false
-cygnus-ngsi.sinks.sth-sink.mongo_hosts = mongo:27017
+cygnus-ngsi.sinks.sth-sink.mongo_hosts = iot-mongo:27017
 cygnus-ngsi.sinks.sth-sink.mongo_username =
 cygnus-ngsi.sinks.sth-sink.mongo_password =
 cygnus-ngsi.sinks.sth-sink.db_prefix = sth_
