--- a/cygnus-twitter/pom.xml
+++ b/cygnus-twitter/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.telefonica.iot</groupId>
     <artifactId>cygnus-twitter</artifactId>
-    <version>1.3.0</version>
+    <version>1.3.0_SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>cygnus-twitter</name>
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>com.telefonica.iot</groupId>
             <artifactId>cygnus-common</artifactId>
-            <version>1.3.0</version>
+            <version>1.3.0_SNAPSHOT</version>
         </dependency>
         <!-- Required by twitter agent -->
         <dependency>
